Make sure run methods wait for termination